--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 	<div class="navbar">
     	<div class="navbar-inner">
-    		<a class="brand" href="/books">Bookface</a>
+    		<a class="brand" href="/books">Bookshelf</a>
     		<ul class="nav">
     		<li class="active"><a href="/books">Home</a></li>
     		<div class="newbook"><%= link_to "+ Add Book", new_book_path, :class => "btn btn-small btn-primary" %></div>
