--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
 <body>
 	<div class="navbar">
     	<div class="navbar-inner">
-    		<a class="brand" href="/books">Bookshelf</a>
+    		<%= link_to "Bookshelf", root_path, :class => "brand" %>
     		<ul class="nav">
     		<li class="active"><a href="/books">Home</a></li>
     		<div class="newbook"><%= link_to "+ Add Book", new_book_path, :class => "btn btn-small btn-primary" %></div>
     		<li><a href="#">Link</a></li>
     		</ul>
-    		<%= form_tag books_path, :class => "form_search", :remote => true, :method => :get do %>
+    		<%= form_tag books_path, :class => "form_search", :method => :get do %>
           <%= text_field_tag :search, params[:search], :class => "search-query", :id =>"book_search" %>
           <% end %>
     		</form>
